--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
     android:background="@drawable/background">
 
     <Button
+        android:id="@+id/btn_blessing"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:text="@string/blessing"
@@ -17,6 +18,7 @@
         android:layout_marginTop="600dp"
         android:layout_marginStart="210dp"/>
     <Button
+        android:id="@+id/btn_reset"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:text="@string/reset"
@@ -25,6 +27,7 @@
         android:layout_marginTop="600dp"
         android:layout_marginStart="20dp"/>
     <TextView
+        android:id="@+id/txt_count"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="@string/Zero"
@@ -34,6 +37,4 @@
         android:gravity="center"
         android:layout_marginTop="400dp"
         android:layout_marginStart="30dp"/>
-
-
 </RelativeLayout>
